--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,18 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.v4.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".HomeActivity"
+        android:id="@+id/drawer_layout"
 >
 
-    <android.support.v7.widget.Toolbar
-            android:id="@+id/app_bar"
+    <RelativeLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:elevation="4dp"
-            android:background="@color/VibrantRed"
+            android:layout_height="match_parent"
+            tools:context=".HomeActivity"
+    >
+
+        <android.support.v7.widget.Toolbar
+                android:id="@+id/app_bar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:elevation="4dp"
+                android:background="@color/VibrantRed"
+        />
+
+    </RelativeLayout>
+
+    <!--Drawer-->
+
+    <ListView android:id="@+id/list_view"
+              android:layout_width="240dp"
+              android:layout_height="match_parent"
+              android:layout_gravity="start"
+              android:choiceMode="singleChoice"
+              android:divider="@color/White"
+              android:dividerHeight="1dp"
+              android:background="@color/VibrantRed"
     />
 
-</RelativeLayout>
+
+
+</android.support.v4.widget.DrawerLayout>
