--- a/app/src/main/res/menu/app_compat_menu.xml
+++ b/app/src/main/res/menu/app_compat_menu.xml
@@ -4,14 +4,14 @@
 
     <item
         android:id="@+id/opt_addTask"
-        android:title="Add task"
+        android:title="@string/opt_addTask"
         app:showAsAction="ifRoom"
         />
 
 
     <item
         android:id="@+id/opt_settings"
-        android:title="Settings"
+        android:title="@string/opt_settings"
         app:showAsAction="never"
         />
 </menu>
