designed navigation drawer

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".HomeActivity"
         android:id="@+id/drawer_layout"
+        android:fitsSystemWindows="true"
 >
 
     <RelativeLayout
@@ -28,16 +30,17 @@
 
     <!--Drawer-->
 
-    <ListView android:id="@+id/list_view"
-              android:layout_width="240dp"
-              android:layout_height="match_parent"
-              android:layout_gravity="start"
-              android:choiceMode="singleChoice"
-              android:divider="@color/White"
-              android:dividerHeight="1dp"
-              android:background="@color/VibrantRed"
+    <android.support.design.widget.NavigationView
+            android:id="@+id/navigation_view"
+            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_gravity="start"
+            android:fitsSystemWindows="true"
+            android:background="@color/VibrantRed"
+            app:theme="@style/style_navigation"
+            app:headerLayout="@layout/drawer_header"
+            app:menu="@menu/drawer_view"
+
     />
-
-
 
 </android.support.v4.widget.DrawerLayout>
