--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -225,6 +225,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:src="@drawable/login_google" android:scaleType="fitCenter"
+                android:background="@drawable/login_google"
                 android:adjustViewBounds="true"
                 android:padding="1dp"
                 android:clickable="true"
