--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,10 +11,8 @@
     </style>
 
     <style name="style_navigation">
-        <item name="android:textAlignment">center</item>
+        <!--<item name="android:textAlignment">center</item>-->
         <item name="android:layout_centerHorizontal">true</item>
         <item name="android:gravity">center</item>
-
-
     </style>
 </resources>
