--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,7 +10,7 @@
         android:fitsSystemWindows="true"
 >
 
-        <android.support.design.widget.AppBarLayout
+        <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
@@ -25,26 +25,16 @@
                     android:background="@color/VibrantRed"
             />
 
-            <android.support.design.widget.TabLayout
-                    android:id="@+id/tabLayout"
+            <fragment
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:tabGravity="fill"
-                    app:tabMode="fixed"
-                    android:background="@color/VibrantRed"
-                    app:tabTextColor="@color/White"
-                    app:tabIndicatorColor="@color/White"
+                    android:id="@+id/main_fragment"
+                    android:name="test.lezwon.firstapp.ChatListFragment"
+                    android:layout_marginTop="10dp"
+                    tools:layout="@layout/fragment_chat_list"
             />
 
-            <android.support.v4.view.ViewPager
-                    android:id="@+id/viewpager"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            />
-
-
-        </android.support.design.widget.AppBarLayout>
+        </LinearLayout>
 
 
     <!--Drawer-->
