--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
-        <item android:id="@+id/nav_home" android:title="@string/nav_home" />
-        <item android:id="@+id/nav_wallet" android:title="@string/nav_wallet" />
-        <item android:id="@+id/nav_about" android:title="@string/nav_about" />
-        <item android:id="@+id/nav_settings" android:title="@string/nav_settings" android:icon="@drawable/ic_action_settings"/>
-        <item android:id="@+id/nav_signout" android:title="@string/nav_signout"/>
+        <item android:title="@string/nav_drawer_1" android:icon="@android:color/transparent"/>
+        <item android:title="@string/nav_drawer_2" android:icon="@android:color/transparent"/>
+        <item android:title="@string/nav_drawer_3" android:icon="@android:color/transparent"/>
+        <item android:title="@string/nav_drawer_4" android:icon="@android:color/transparent"/>
     </group>
 </menu>
