--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="test.lezwon.firstapp.HomeFragment">
+        tools:context=".TabsFragment">
 
     <android.support.design.widget.TabLayout
             android:id="@+id/tabLayout"
