--- a/app/src/main/res/layout/activity_chat_messages.xml
+++ b/app/src/main/res/layout/activity_chat_messages.xml
@@ -5,9 +5,10 @@
         xmlns:emojicon="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/White"
+        android:background="@drawable/chat_bg"
         android:orientation="vertical"
-        tools:context="test.lezwon.firstapp.ChatMessagesActivity">
+        tools:context="test.lezwon.firstapp.ChatMessagesActivity"
+>
 
         <include layout="@layout/app_bar"/>
 
@@ -20,31 +21,33 @@
                 android:padding="5dp"
                 android:layout_alignParentBottom="false"
                 android:layout_above="@+id/emojicons"
+                android:background="@color/LightGrey"
         >
 
                 <com.rockerhieu.emojicon.EmojiconEditText
+                        android:id="@+id/chat_textbox"
                         emojicon:emojiconSize="28sp"
-                        android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight=".8"
                         android:inputType="textMultiLine"
                         android:textColor="@color/Black"
                         android:cursorVisible="true"
-                        android:background="@drawable/chat_textbox_shape"
                         android:padding="10dp"
                         android:singleLine="true"
                         android:textCursorDrawable="@null"
+                        android:layout_width="0dp"
+                        android:layout_weight=".85"
                 />
 
                 <Button
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight=".2"
+                        android:layout_height="50dp"
+                        android:layout_weight=".15"
                         android:padding="0dp"
                         android:layout_margin="0dp"
-                        android:background="@drawable/circle_green"
-                        android:text="GO"
+                        android:background="@drawable/ic_action_name"
                         android:onClick="openEmoji"
+                        android:textSize="12sp"
+                        style="?android:attr/borderlessButtonStyle"
                 />
 
         </LinearLayout>
@@ -55,7 +58,6 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:background="@color/LightGrey"
-                android:paddingTop="5dp"
         />
 
 </RelativeLayout>
