--- a/app/src/main/res/layout/activity_chat_messages.xml
+++ b/app/src/main/res/layout/activity_chat_messages.xml
@@ -3,6 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:emojicon="http://schemas.android.com/apk/res-auto"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/chat_bg"
@@ -19,9 +20,8 @@
                 android:orientation="horizontal"
                 android:weightSum="1"
                 android:padding="5dp"
-                android:layout_alignParentBottom="false"
-                android:layout_above="@+id/emojicons"
                 android:background="@color/LightGrey"
+                android:layout_above="@+id/emojicons_container"
         >
 
                 <com.rockerhieu.emojicon.EmojiconEditText
@@ -30,32 +30,31 @@
                         android:layout_height="match_parent"
                         android:inputType="textMultiLine"
                         android:textColor="@color/Black"
-                        android:cursorVisible="true"
+
                         android:padding="10dp"
                         android:singleLine="true"
                         android:textCursorDrawable="@null"
                         android:layout_width="0dp"
-                        android:layout_weight=".85"
+                        android:layout_weight="1"
                 />
 
-                <Button
-                        android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:layout_weight=".15"
-                        android:padding="0dp"
+                <ImageButton
+                        android:layout_width="50dp"
+                        android:layout_height="match_parent"
                         android:layout_margin="0dp"
-                        android:background="@drawable/ic_action_name"
+                        android:src="@drawable/ic_send"
                         android:onClick="openEmoji"
                         android:textSize="12sp"
+                        android:tint="@color/VibrantRed"
                         style="?android:attr/borderlessButtonStyle"
                 />
 
         </LinearLayout>
 
         <FrameLayout
-                android:id="@+id/emojicons"
+                android:id="@+id/emojicons_container"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_alignParentBottom="true"
                 android:background="@color/LightGrey"
         />
