--- a/app/src/main/res/layout/activity_chat_messages.xml
+++ b/app/src/main/res/layout/activity_chat_messages.xml
@@ -3,12 +3,12 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:emojicon="http://schemas.android.com/apk/res-auto"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/chat_bg"
         android:orientation="vertical"
         tools:context="test.lezwon.firstapp.ChatMessagesActivity"
+        android:focusable="false"
 >
 
         <include layout="@layout/app_bar"/>
@@ -23,6 +23,16 @@
                 android:background="@color/LightGrey"
                 android:layout_above="@+id/emojicons_container"
         >
+                <ImageButton
+                        android:id="@+id/btn_insert_emoji"
+                        android:layout_width="35dp"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/ic_insert_emoticon"
+                        android:background="@android:color/transparent"
+                        android:tint="@color/DarkGray"
+                        android:layout_marginEnd="5dp"
+                        android:layout_marginRight="5dp"
+                />
 
                 <com.rockerhieu.emojicon.EmojiconEditText
                         android:id="@+id/chat_textbox"
@@ -43,8 +53,6 @@
                         android:layout_height="match_parent"
                         android:layout_margin="0dp"
                         android:src="@drawable/ic_send"
-                        android:onClick="openEmoji"
-                        android:textSize="12sp"
                         android:tint="@color/VibrantRed"
                         style="?android:attr/borderlessButtonStyle"
                 />
