--- a/app/src/main/res/menu/app_compat_menu.xml
+++ b/app/src/main/res/menu/app_compat_menu.xml
@@ -5,6 +5,7 @@
     <item
         android:id="@+id/opt_addTask"
         android:title="@string/opt_addTask"
+        android:icon="@drawable/ic_add"
         app:showAsAction="ifRoom"
         />
 
