added message ListView added 70% with scaling for main activity

--- a/app/src/main/res/menu/menu_chat_messages.xml
+++ b/app/src/main/res/menu/menu_chat_messages.xml
@@ -23,4 +23,10 @@
             app:showAsAction="never"
     />
 
+    <item
+            android:id="@+id/opt_delete"
+            android:title="@string/opt_delete"
+            app:showAsAction="never"
+    />
+
 </menu>
