--- a/app/src/main/res/layout/activity_chat_messages.xml
+++ b/app/src/main/res/layout/activity_chat_messages.xml
@@ -1,17 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:emojicon="http://schemas.android.com/apk/res-auto"
+        tools:context="test.lezwon.firstapp.ChatMessagesActivity"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/chat_bg"
         android:orientation="vertical"
-        tools:context="test.lezwon.firstapp.ChatMessagesActivity"
         android:focusable="false"
+        android:animateLayoutChanges="true"
 >
 
         <include layout="@layout/app_bar"/>
+
+        <ListView
+                android:layout_marginTop="20dp"
+                android:id="@+id/list_chat_messages"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:dividerHeight="10sp"
+                android:transcriptMode="alwaysScroll"
+                android:divider="@null"
+                android:layout_weight="1"
+
+        />
 
 
         <LinearLayout
@@ -21,7 +34,7 @@
                 android:weightSum="1"
                 android:padding="5dp"
                 android:background="@color/LightGrey"
-                android:layout_above="@+id/emojicons_container"
+                android:layout_gravity="bottom"
         >
                 <ImageButton
                         android:id="@+id/btn_insert_emoji"
@@ -32,6 +45,7 @@
                         android:tint="@color/DarkGray"
                         android:layout_marginEnd="5dp"
                         android:layout_marginRight="5dp"
+
                 />
 
                 <com.rockerhieu.emojicon.EmojiconEditText
@@ -63,8 +77,8 @@
                 android:id="@+id/emojicons_container"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_alignParentBottom="true"
+                android:layout_gravity="bottom"
                 android:background="@color/LightGrey"
         />
 
-</RelativeLayout>
+</LinearLayout>
