added outgoing chat message bubble

--- a/app/src/main/res/layout/activity_chat_messages.xml
+++ b/app/src/main/res/layout/activity_chat_messages.xml
@@ -23,7 +23,7 @@
                 android:transcriptMode="alwaysScroll"
                 android:divider="@null"
                 android:layout_weight="1"
-
+                android:gravity="end"
         />
 
 
