--- a/app/src/main/res/layout/textbox_chat_incoming.xml
+++ b/app/src/main/res/layout/textbox_chat_incoming.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        style="@style/chat_balloon"
         android:background="@drawable/balloon_incoming_normal"
-        android:textColor="@color/Black"
-        android:textSize="16sp"
-        android:gravity="center"
-        android:paddingStart="20dp"
         android:paddingLeft="20dp"
+        android:paddingStart="20dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_gravity="start"
 />
