--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,4 +27,11 @@
         <item name="android:textColor">@color/White</item>
     </style>
 
+    <style name="chat_balloon">
+        <item name="android:padding">10dp</item>
+        <item name="android:textColor">@color/Black</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:gravity">center</item>
+    </style>
+
 </resources>
