fixed incoming message balloon

--- a/app/src/main/res/layout/textbox_chat_incoming.xml
+++ b/app/src/main/res/layout/textbox_chat_incoming.xml
@@ -1,13 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/chat_balloon"
-        android:background="@drawable/balloon_incoming_normal"
-        android:paddingLeft="20dp"
-        android:paddingStart="20dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginEnd="50dp"
-        android:layout_gravity="start"
-/>
+>
+
+    <TextView
+            android:id="@+id/text_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="The world is doomed and will fall to the ashes of the earth"
+            android:gravity="start"
+            android:textColor="@color/Black"
+            android:textSize="16sp"
+            android:background="@drawable/balloon_incoming_normal"
+            android:paddingStart="20dp"
+            android:paddingBottom="20dp"
+            android:paddingTop="5dp"
+            android:paddingLeft="10dp"
+            android:paddingEnd="10dp"
+            android:layout_marginEnd="50dp"
+    />
+
+    <TextView
+            android:id="@+id/text_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="12:57 AM"
+            android:layout_marginStart="20dp"
+            android:layout_alignBottom="@+id/text_message"
+            android:layout_marginEnd="20dp"
+            android:textColor="@color/Gray"
+            android:layout_marginBottom="4dp"
+    />
+
+</RelativeLayout>
+
