--- a/app/src/main/res/layout/activity_chat_messages.xml
+++ b/app/src/main/res/layout/activity_chat_messages.xml
@@ -1,40 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:emojicon="http://schemas.android.com/apk/res-auto"
         tools:context="test.lezwon.firstapp.ChatMessagesActivity"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/chat_bg"
         android:orientation="vertical"
         android:focusable="false"
         android:animateLayoutChanges="true"
 >
 
-        <include layout="@layout/app_bar"/>
+
+        <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/chat_bg"
+                android:scaleType="centerCrop"
+        />
+
+        <include layout="@layout/app_bar" android:id="@+id/toolbar_container"/>
+
+
 
         <ListView
-                android:layout_marginTop="20dp"
                 android:id="@+id/list_chat_messages"
+                android:layout_below="@+id/toolbar_container"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="match_parent"
                 android:dividerHeight="10sp"
                 android:transcriptMode="alwaysScroll"
                 android:divider="@null"
-                android:layout_weight="1"
                 android:gravity="end"
+                android:layout_marginBottom="60dp"
         />
 
 
         <LinearLayout
+                android:id="@+id/text_message_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:weightSum="1"
                 android:padding="5dp"
                 android:background="@color/LightGrey"
-                android:layout_gravity="bottom"
+                android:layout_above="@+id/emojicons_container"
         >
                 <ImageButton
                         android:id="@+id/btn_insert_emoji"
@@ -77,8 +87,8 @@
                 android:id="@+id/emojicons_container"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_gravity="bottom"
                 android:background="@color/LightGrey"
+                android:layout_alignParentBottom="true"
         />
 
-</LinearLayout>
+</RelativeLayout>
