--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -142,4 +142,6 @@
     <color name="Black">#000000</color>
     <color name="VibrantRed">#f04343</color>
     <color name="DarkVibrantRed">#c22626</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
