--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,23 +10,62 @@
         android:fitsSystemWindows="true"
 >
 
-        <LinearLayout
+        <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                 android:orientation="vertical">
 
-            <include layout="@layout/app_bar"/>
+            <include layout="@layout/app_bar" android:id="@+id/include_app_bar"/>
+
+            <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_below="@id/include_app_bar"
+                    android:layout_height="5dp"
+                    android:background="@drawable/shadow_top_to_bottom"
+            >
+
+            </FrameLayout>
 
             <fragment
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_below="@id/include_app_bar"
                     android:id="@+id/main_fragment"
                     android:name="test.lezwon.firstapp.ChatListFragment"
                     tools:layout="@layout/fragment_chat_list"
             />
 
-        </LinearLayout>
+            <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_above="@+id/menu_bottom"
+                    android:layout_height="5dp"
+                    android:background="@drawable/shadow_bottom_to_top"
+            >
+
+            </FrameLayout>
+
+            <LinearLayout
+                    android:id="@+id/menu_bottom"
+                    android:layout_alignParentBottom="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:weightSum="5"
+                    android:padding="5dp"
+                    android:background="@color/Black"
+            >
+
+                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_call" android:layout_weight="1"/>
+                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_call" android:layout_weight="1"/>
+                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_call" android:layout_weight="1"/>
+                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_call" android:layout_weight="1"/>
+                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_call" android:layout_weight="1"/>
+
+
+            </LinearLayout>
+
+        </RelativeLayout>
 
 
     <!--Drawer-->
