added animation to bottom menu

--- a/app/src/main/res/drawable/shadow_bottom_to_top.xml
+++ b/app/src/main/res/drawable/shadow_bottom_to_top.xml
@@ -4,7 +4,7 @@
 
     <gradient
             android:type="linear"
-            android:startColor="#FF808080"
+            android:startColor="#c4c4c4"
             android:endColor="#00c0c0c0"
             android:angle="90"/>
 </shape>
