--- a/app/src/main/res/animator/animation.xml
+++ b/app/src/main/res/animator/animation.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android" android:ordering="together">
     <!--<objectAnimator android:propertyName="rotation" android:valueFrom="0" android:valueTo="300" android:repeatMode="reverse"/>-->
-    <objectAnimator android:propertyName="translationY" android:valueFrom="300" android:valueTo="0" android:duration="1000" android:startOffset="300"/>
+    <objectAnimator android:propertyName="translationY" android:valueFrom="150" android:valueTo="0" android:duration="300"/>
 </set>
