--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -169,6 +169,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:visibility="visible"
     >
 
         <LinearLayout 
@@ -179,17 +180,10 @@
                 
         >
 
-            <TextView android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:text="I'm a "
-                      android:layout_gravity="center"
-                      android:textSize="30sp"
-            />
 
             <de.hdodenhof.circleimageview.CircleImageView
-                    android:layout_marginTop="30dp"
-                    android:layout_width="200dp" 
-                    android:layout_height="200dp"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
                     android:src="@color/LightBlue"
                     android:layout_gravity="center"
             />
@@ -197,68 +191,125 @@
             <RelativeLayout 
                     android:layout_width="wrap_content" 
                     android:layout_height="wrap_content"
-
             >
                 
                 <RadioGroup
-                        android:layout_width="wrap_content"
+                        android:id="@+id/radioGroup_gender"
+                        android:layout_width="260dp"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:layout_marginTop="30dp"
-
+                        android:layout_marginTop="15dp"
+                        android:weightSum="2"
                 >
                     <RadioButton
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:text="Male"
-                            android:textSize="25sp"
-                            android:width="150dp"
+                            android:text="Dude"
+                            android:textSize="20sp"
                             android:button="@null"
                             android:gravity="center"
+                            android:padding="15dp"
+                            android:maxWidth="130dp"
+                            android:layout_weight="1"
+
                     />
 
                     <RadioButton
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:text="Female"
-                            android:textSize="25sp"
-                            android:width="150dp"
+                            android:text="Chick"
+                            android:textSize="20sp"
                             android:button="@null"
-                    />
+                            android:gravity="center"
+                            android:padding="15dp"
+                            android:maxWidth="130dp"
+                            android:layout_weight="1"
+
+                            />
 
                 </RadioGroup>
+
+                <ImageView
+                        android:id="@+id/img_gender_line"
+                        android:layout_width="130dp"
+                        android:layout_height="3dp"
+                        android:layout_below="@id/radioGroup_gender"
+                        android:background="@drawable/underline_white"
+                />
                 
             </RelativeLayout>
 
-            <LinearLayout
-                    android:layout_width="wrap_content"
+
+            <RelativeLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="30dp"
+
             >
 
-                <EditText
-                        android:layout_width="wrap_content"
+                <RadioGroup
+                        android:id="@+id/radioGroup_age"
+                        android:layout_width="260dp"
                         android:layout_height="wrap_content"
-                        android:width="100dp"
-                        android:height="150dp"
-                        android:layout_marginRight="15dp"
-                        android:layout_marginEnd="15dp"
-                        android:singleLine="true" android:numeric="integer" android:nestedScrollingEnabled="false"
-                        android:inputType="number" android:digits="2"/>
+                        android:orientation="horizontal"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="30dp"
+                        android:weightSum="3"
+                >
 
-                <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="years old"
-                        android:textSize="25sp"
-                        android:textColor="@color/White"
+                    <RadioButton
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:text="15 - 20"
+                            android:textSize="18sp"
+                            android:width="130dp"
+                            android:button="@null"
+                            android:gravity="center"
+                            android:padding="15dp"
+
+                    />
+
+                    <RadioButton
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:text="21 - 25"
+                            android:textSize="18sp"
+                            android:width="130dp"
+                            android:button="@null"
+                            android:gravity="center"
+                            android:padding="15dp"
+
+                    />
+
+                    <RadioButton
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:text="26 - 30"
+                            android:textSize="18sp"
+                            android:width="130dp"
+                            android:button="@null"
+                            android:gravity="center"
+                            android:padding="15dp"
+
+                    />
+
+                </RadioGroup>
+
+                <ImageView
+                        android:id="@+id/img_age_line"
+                        android:layout_width="86dp"
+                        android:layout_height="3dp"
+                        android:layout_below="@id/radioGroup_age"
+                        android:background="@drawable/underline_white"
                 />
 
-            </LinearLayout>
+            </RelativeLayout>
+
 
             <Button
+                    android:id="@+id/btn_getStarted"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Get Started"
