--- a/app/src/main/res/menu/app_compat_menu.xml
+++ b/app/src/main/res/menu/app_compat_menu.xml
@@ -5,14 +5,8 @@
     <item
         android:id="@+id/opt_addTask"
         android:title="@string/opt_addTask"
-        android:icon="@drawable/ic_add"
+        android:icon="@drawable/ic_options"
         app:showAsAction="ifRoom"
         />
 
-
-    <item
-        android:id="@+id/opt_settings"
-        android:title="@string/opt_settings"
-        app:showAsAction="never"
-        />
 </menu>
