--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -10,11 +10,22 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Bhatinder"
-            android:textSize="70sp"
+            android:textSize="35sp"
             android:gravity="center"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"/>
+            android:layout_alignParentStart="true"
+            android:visibility="gone"
+    />
+
+    <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/banner"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+    />
 
     <Button
             android:id="@+id/btn_register"
