animated google sign in button

--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,22 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:background="@color/White"
 >
-
-    <TextView
-            android:id="@+id/app_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Bhatinder"
-            android:textSize="35sp"
-            android:gravity="center"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:visibility="gone"
-    />
 
     <ImageView
             android:id="@+id/app_logo"
@@ -35,28 +22,12 @@
             android:layout_below="@id/app_logo"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="20dp"
-            android:stateListAnimator="@null">
+            android:stateListAnimator="@null"
+            app:buttonSize="wide"
+            app:colorScheme="auto"
+    >
 
     </com.google.android.gms.common.SignInButton>
 
-    <Button
-            android:id="@+id/btn_register"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Register"
-            android:background="@drawable/white_stroke"
-            android:stateListAnimator="@null"
-            android:paddingLeft="100dp"
-            android:paddingRight="100dp"
-            android:visibility="gone"
-            android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"
-            android:layout_marginBottom="40dp"
-    />
-
-
-    <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageView2" android:layout_below="@+id/app_title" android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
