fixed silent sign in and sign out

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -110,6 +110,7 @@
                     android:textSize="16sp"
                     android:stateListAnimator="@null"
                     android:focusable="true"
+                    android:layout_gravity="center"
             />
 
         </LinearLayout>
